--- a/kartka.html
+++ b/kartka.html
@@ -1,135 +1,245 @@
 <!DOCTYPE html>
 <html lang="pl">
-    <head>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <title>Danziger Chronograf – Tytuł Artykułu</title>
-        <meta content="Opis artykułu na stronie sekcji." name="description"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/>
-        <link href="css/section.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <header>
-            <button id="menu-toggle">☰</button>
-            <button id="search-toggle">
-                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-            </button>             <a class="header-link" href="index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
-        </header>
-        <nav class="main-nav">
-            <ul>
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
-                </li>
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
-                </li>
-                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a>
-                </li>
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a>
-                </li>
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a>
-                </li>
-                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a>
-                </li>
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a>
-                </li>
-            </ul>
-        </nav>
-        <div id="menu-overlay"></div>
-        <div id="offcanvas-menu">
-            <ul>
-                <li> <a href="stand.html">STANDPUNKT</a>
-                </li>
-                <li> <a href="prawo.html">PRAWO</a>
-                </li>
-                <li> <a href="lokalnie.html">LOKALNIE</a>
-                </li>
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
-                </li>
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a>
-                </li>
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a>
-                </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a></li>
-                <li><a href="lm.html">LUMEN MUNDI</a></li>
-                <li><a href="west.html">Z ZACHODU</a></li>
-                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
-                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
-            </ul>
-        </div>
-        <div class="mobile-top-gadgets-container">
-            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
-</iframe>
-            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
-</iframe>
-        </div>
-        <div class="main-layout-wrapper">
-            <div class="main-content">
-                <div class="ads google article-top-ad">
-                    </div>
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Jak powstało Trójmiasto.</h1>
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia.</p>
-                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
-                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/PrC5zSqZ/3city-online.jpg?text=Duży+Obraz+Artykułu"/>
-                <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
-                <div class="article-body">
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">A po wojnie? Powojenny chaos i potrzeba szybkiej odbudowy wymusiły pragmatyzm. Władze komunistyczne dostrzegły potencjał w synergii trzech miast. W 1950 roku powołano Związek Miast Nadmorskich &ndash; nieformalne ciało koordynujące rozwój. Ale prawdziwa integracja zaczęła się na poziomie infrastruktury: wspólne plany zagospodarowania przestrzennego, rozbudowa sieci komunikacyjnej (głównie kolejowej SKM), centralne zarządzanie portami i przemysłem.</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">W latach 60. i 70. budowano wspólne osiedla (np. Przymorze), planowano połączenia drogowe (Obwodnica Trójmiasta) i rozwijało się szkolnictwo wyższe (Uniwersytet Gdański). Pojęcie &bdquo;Trójmiasto&rdquo; weszło do języka potocznego, a potem do nomenklatury administracyjnej. Było to połączenie przymusowe, ale i racjonalne &ndash; żadne z miast nie mogło rozwijać się w izolacji tak efektywnie.</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Dziś? Mimo formalnej odrębności, Trójmiasto funkcjonuje jako jedna metropolia. Wspólne lotnisko, komunikacja publiczna, rynek pracy, uczelnie. Istnieją plany utworzenia metropolitalnego związku, który mógłby scalić zarządzanie. Ale historia pokazuje, że idea Trójmiasta to nie tylko dekret &ndash; to wynik naturalnej synergii i wspólnych potrzeb.</p>
-                </div>
-                
-<div class="article-actions">
-    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
-    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
-    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
-    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
-    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
-</div>
-
-                <div class="section-separator"></div>
-                <div class="editorial-info">
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
-                </div>
-            </div>
-            <div class="vertical-strip"></div>
-            <aside class="sidebar kontener-szary desktop-sidebar">
-                <div class="clock-calendar-row">
-                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
-</iframe>
-                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
-</iframe>
-                </div>
-                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-                <div class="support-newsletter-section">
-                    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
-</iframe>
-                </div>
-                <div class="ads google sidebar-bottom-ad">
-                    <p>Reklama Google (na dole sidebara)</p>
-                </div>
-            </aside>
-        </div>
-        <div class="mobile-bottom-gadgets-container">
-            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-            <div class="support-newsletter-section">
-                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
-</iframe>
-            </div>
-            <div class="ads google sidebar-bottom-ad">
-                <p>Reklama Google (na dole sidebara)</p>
-            </div>
-        </div>
-        <footer>
-</footer>
-        <script>
-    // Offcanvas menu script
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Danziger Chronograf – Tytuł Artykułu
+  </title>
+  <meta content="Opis artykułu na stronie sekcji." name="description"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <link href="css/theme.css" rel="stylesheet" type="text/css"/>
+  <link href="css/section.css" rel="stylesheet" type="text/css"/>
+  <link href="css/cookie-bar.css" rel="stylesheet"/>
+ </head>
+ <body>
+  <header>
+   <button id="menu-toggle">
+    ☰
+   </button>
+   <button id="search-toggle">
+    <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+     </path>
+    </svg>
+   </button>
+   <a class="header-link" href="index.html">
+    <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">
+     GDAŃSKI
+     <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
+     REPORTER
+    </h1>
+   </a>
+  </header>
+  <nav class="main-nav">
+   <ul>
+    <li>
+     <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      STANDPUNKT
+     </a>
+    </li>
+    <li>
+     <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      PRAWO
+     </a>
+    </li>
+    <li>
+     <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      LOKALNIE
+     </a>
+    </li>
+    <li>
+     <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      DOBRZE NA DZIŚ
+     </a>
+    </li>
+    <li>
+     <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      OBYWATELE NIE PL
+     </a>
+    </li>
+    <li>
+     <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      KARTKA Z HISTORII
+     </a>
+    </li>
+    <li>
+     <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">
+      DANZIGER CHRONOGRAF
+     </a>
+    </li>
+   </ul>
+  </nav>
+  <div id="menu-overlay">
+  </div>
+  <div id="offcanvas-menu">
+   <ul>
+    <li>
+     <a href="stand.html">
+      STANDPUNKT
+     </a>
+    </li>
+    <li>
+     <a href="prawo.html">
+      PRAWO
+     </a>
+    </li>
+    <li>
+     <a href="lokalnie.html">
+      LOKALNIE
+     </a>
+    </li>
+    <li>
+     <a href="dobrze.html">
+      DOBRZE NA DZIŚ
+     </a>
+    </li>
+    <li>
+     <a href="notpl.html">
+      OBYWATELE NIE PL
+     </a>
+    </li>
+    <li>
+     <a href="kartka.html">
+      KARTKA Z HISTORII
+     </a>
+    </li>
+    <li>
+     <a href="de/chronograf.html">
+      DANZIGER CHRONOGRAF
+     </a>
+    </li>
+    <li>
+     <a href="lm.html">
+      LUMEN MUNDI
+     </a>
+    </li>
+    <li>
+     <a href="west.html">
+      Z ZACHODU
+     </a>
+    </li>
+    <li>
+     <a href="fin.html">
+      GDAŃSKI PORTFEL
+     </a>
+    </li>
+    <li>
+     <a href="pixel.html">
+      PIXEL &amp; PLOT: SPRAWDZIMY TO?
+     </a>
+    </li>
+   </ul>
+  </div>
+  <div class="mobile-top-gadgets-container">
+   <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+   </iframe>
+   <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+   </iframe>
+  </div>
+  <div class="main-layout-wrapper">
+   <div class="main-content">
+    <div class="ads google article-top-ad">
+    </div>
+    <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">
+     Jak powstało Trójmiasto.
+    </h1>
+    <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">
+     Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia.
+    </p>
+    <p class="author-date">
+     Autor: Jan Kowalski | Data publikacji: 26 lipca 2025
+    </p>
+    <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/PrC5zSqZ/3city-online.jpg?text=Duży+Obraz+Artykułu"/>
+    <p class="image-caption">
+     To jest podpis pod obrazem, krótki i opisowy.
+    </p>
+    <div class="article-body">
+     <p style="font-family: 'Merriweather', serif; font-size: 16px;">
+      Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.
+     </p>
+     <p style="font-family: 'Merriweather', serif; font-size: 16px;">
+      A po wojnie? Powojenny chaos i potrzeba szybkiej odbudowy wymusiły pragmatyzm. Władze komunistyczne dostrzegły potencjał w synergii trzech miast. W 1950 roku powołano Związek Miast Nadmorskich – nieformalne ciało koordynujące rozwój. Ale prawdziwa integracja zaczęła się na poziomie infrastruktury: wspólne plany zagospodarowania przestrzennego, rozbudowa sieci komunikacyjnej (głównie kolejowej SKM), centralne zarządzanie portami i przemysłem.
+     </p>
+     <p style="font-family: 'Merriweather', serif; font-size: 16px;">
+      W latach 60. i 70. budowano wspólne osiedla (np. Przymorze), planowano połączenia drogowe (Obwodnica Trójmiasta) i rozwijało się szkolnictwo wyższe (Uniwersytet Gdański). Pojęcie „Trójmiasto” weszło do języka potocznego, a potem do nomenklatury administracyjnej. Było to połączenie przymusowe, ale i racjonalne – żadne z miast nie mogło rozwijać się w izolacji tak efektywnie.
+     </p>
+     <p style="font-family: 'Merriweather', serif; font-size: 16px;">
+      Dziś? Mimo formalnej odrębności, Trójmiasto funkcjonuje jako jedna metropolia. Wspólne lotnisko, komunikacja publiczna, rynek pracy, uczelnie. Istnieją plany utworzenia metropolitalnego związku, który mógłby scalić zarządzanie. Ale historia pokazuje, że idea Trójmiasta to nie tylko dekret – to wynik naturalnej synergii i wspólnych potrzeb.
+     </p>
+    </div>
+    <div class="article-actions">
+     <a href="index.html" role="button" style="font-weight: 400;">
+      Start page
+     </a>
+     <a href="comments.html" role="button" style="font-weight: 400;">
+      Comment
+     </a>
+     <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
+      Share
+     </a>
+     <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
+      Copy link
+     </a>
+     <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
+      Print
+     </a>
+    </div>
+    <div class="section-separator">
+    </div>
+    <div class="editorial-info">
+     <p>
+      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig
+     </p>
+     <a class="contact-btn" href="kontakt.html">
+      Skontaktuj się z nami
+     </a>
+    </div>
+   </div>
+   <div class="vertical-strip">
+   </div>
+   <aside class="sidebar kontener-szary desktop-sidebar">
+    <div class="clock-calendar-row">
+     <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+     </iframe>
+     <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+     </iframe>
+    </div>
+    <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+    </iframe>
+    <div class="support-newsletter-section">
+     <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+     </iframe>
+    </div>
+    <div class="ads google sidebar-bottom-ad">
+     <p>
+      Reklama Google (na dole sidebara)
+     </p>
+    </div>
+   </aside>
+  </div>
+  <div class="mobile-bottom-gadgets-container">
+   <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+   </iframe>
+   <div class="support-newsletter-section">
+    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+    </iframe>
+   </div>
+   <div class="ads google sidebar-bottom-ad">
+    <p>
+     Reklama Google (na dole sidebara)
+    </p>
+   </div>
+  </div>
+  <footer>
+  </footer>
+  <script>
+   // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
     const menu   = document.getElementById('offcanvas-menu');
     const overlay= document.getElementById('menu-overlay');
@@ -151,5 +261,16 @@
 
     // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
   </script>
-    </body>
+  <div class="cookie-bar" id="cookie-bar">
+   <p>
+    Ta strona używa plików cookie w celu zapewnienia jak najlepszego komfortu użytkowania.
+    Kontynuując, wyrażasz zgodę na ich użycie.
+   </p>
+   <button id="accept-cookies">
+    Akceptuję
+   </button>
+  </div>
+  <script src="js/cookie-bar.js">
+  </script>
+ </body>
 </html>
