--- a/stand.html
+++ b/stand.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="pl">
-    <head>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <title>Danziger Chronograf – Tytuł Artykułu</title>
-        <meta content="Opis artykułu na stronie sekcji." name="description"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-        <!-- All font imports from index.html are added here for consistency -->
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=ADLaM+Display&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=AR+One+Sans&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Abel&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&amp;family=Playfair+Display:wght@700&amp;family=Oswald:wght@500&amp;display=swap" rel="stylesheet"/>
-        <!-- Existing CSS files -->
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/>
-        <link href="css/section.css" rel="stylesheet" type="text/css"/>
-        <style>
-           .article-actions {
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Danziger Chronograf – Tytuł Artykułu
+  </title>
+  <meta content="Opis artykułu na stronie sekcji." name="description"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <!-- All font imports from index.html are added here for consistency -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=ADLaM+Display&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=AR+One+Sans&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Abel&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&amp;family=Playfair+Display:wght@700&amp;family=Oswald:wght@500&amp;display=swap" rel="stylesheet"/>
+  <!-- Existing CSS files -->
+  <link href="css/theme.css" rel="stylesheet" type="text/css"/>
+  <link href="css/section.css" rel="stylesheet" type="text/css"/>
+  <style>
+   .article-actions {
              display: flex; /* Use flexbox for layout */
              justify-content: center; /* Center items horizontally */
              flex-wrap: wrap; /* Allow items to wrap on smaller screens */
@@ -50,79 +52,160 @@
            .article-actions button {
              /* Any specific button overrides can go here if needed */
            }
-        </style>
-    </head>
-    <body>
-        <header>
-            <button id="menu-toggle">☰</button>
-            <button id="search-toggle">
-                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-            </button><a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
-        </header>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="stand.html">STANDPUNKT</a>
-                </li>
-                <li><a href="prawo.html">PRAWO</a>
-                </li>
-                <li><a href="lokalnie.html">LOKALNIE</a>
-                </li>
-                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
-                </li>
-                <li><a href="notpl.html">OBYWATELE NIE PL</a>
-                </li>
-                <li><a href="kartka.html">KARTKA Z HISTORII</a>
-                </li>
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
-                </li>
-            </ul>
-        </nav>
-        <div id="menu-overlay"></div>
-        <div id="offcanvas-menu">
-            <ul>
-                <li><a href="stand.html">STANDPUNKT</a>
-                </li>
-                <li><a href="prawo.html">PRAWO</a>
-                </li>
-                <li><a href="lokalnie.html">LOKALNIE</a>
-                </li>
-                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
-                </li>
-                <li><a href="notpl.html">OBYWATELE NIE PL</a>
-                </li>
-                <li><a href="kartka.html">KARTKA Z HISTORII</a>
-                </li>
-                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
-                </li>
-                <li><a href="lm.html">LUMEN MUNDI</a></li>
-                <li><a href="west.html">Z ZACHODU</a></li>
-                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
-                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
-            </ul>
-        </div>
-        <div class="mobile-top-gadgets-container">
-            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
-</iframe>
-            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
-</iframe>
-        </div>
-        <div class="main-layout-wrapper">
-            <div class="main-content">
-                <div class="ads google article-top-ad">
-</div>
-                <h1 class="article-title" style="">Gdański Łabędź, czyli o tych, których już nie liczymy</h1>
-                <p class="lead" style="">W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
-                    Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności  </p>
-                <p class="author-date">Redakcja| Data publikacji: 26 lipca 2025</p>
-                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/qMkJBWh5/sw22.jpg?text=Duży+Obraz+Artykułu"/>
-                <p class="image-caption">The King’s Swan Marker David Barber mit einem seiner Schützlinge Picture Alliance</p>
-                <div class="article-body">
-                    <p style="">W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
+  </style>
+  <link href="css/cookie-bar.css" rel="stylesheet"/>
+ </head>
+ <body>
+  <header>
+   <button id="menu-toggle">
+    ☰
+   </button>
+   <button id="search-toggle">
+    <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+     </path>
+    </svg>
+   </button>
+   <a class="header-link" href="index.html">
+    <h1 style="">
+     GDAŃSKI
+     <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
+     REPORTER
+    </h1>
+   </a>
+  </header>
+  <nav class="main-nav">
+   <ul>
+    <li>
+     <a href="stand.html">
+      STANDPUNKT
+     </a>
+    </li>
+    <li>
+     <a href="prawo.html">
+      PRAWO
+     </a>
+    </li>
+    <li>
+     <a href="lokalnie.html">
+      LOKALNIE
+     </a>
+    </li>
+    <li>
+     <a href="dobrze.html">
+      DOBRZE NA DZIŚ
+     </a>
+    </li>
+    <li>
+     <a href="notpl.html">
+      OBYWATELE NIE PL
+     </a>
+    </li>
+    <li>
+     <a href="kartka.html">
+      KARTKA Z HISTORII
+     </a>
+    </li>
+    <li>
+     <a href="de/chronograf.html">
+      DANZIGER CHRONOGRAF
+     </a>
+    </li>
+   </ul>
+  </nav>
+  <div id="menu-overlay">
+  </div>
+  <div id="offcanvas-menu">
+   <ul>
+    <li>
+     <a href="stand.html">
+      STANDPUNKT
+     </a>
+    </li>
+    <li>
+     <a href="prawo.html">
+      PRAWO
+     </a>
+    </li>
+    <li>
+     <a href="lokalnie.html">
+      LOKALNIE
+     </a>
+    </li>
+    <li>
+     <a href="dobrze.html">
+      DOBRZE NA DZIŚ
+     </a>
+    </li>
+    <li>
+     <a href="notpl.html">
+      OBYWATELE NIE PL
+     </a>
+    </li>
+    <li>
+     <a href="kartka.html">
+      KARTKA Z HISTORII
+     </a>
+    </li>
+    <li>
+     <a href="de/chronograf.html">
+      DANZIGER CHRONOGRAF
+     </a>
+    </li>
+    <li>
+     <a href="lm.html">
+      LUMEN MUNDI
+     </a>
+    </li>
+    <li>
+     <a href="west.html">
+      Z ZACHODU
+     </a>
+    </li>
+    <li>
+     <a href="fin.html">
+      GDAŃSKI PORTFEL
+     </a>
+    </li>
+    <li>
+     <a href="pixel.html">
+      PIXEL &amp; PLOT: SPRAWDZIMY TO?
+     </a>
+    </li>
+   </ul>
+  </div>
+  <div class="mobile-top-gadgets-container">
+   <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+   </iframe>
+   <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+   </iframe>
+  </div>
+  <div class="main-layout-wrapper">
+   <div class="main-content">
+    <div class="ads google article-top-ad">
+    </div>
+    <h1 class="article-title" style="">
+     Gdański Łabędź, czyli o tych, których już nie liczymy
+    </h1>
+    <p class="lead" style="">
+     W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
+                    Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności
+    </p>
+    <p class="author-date">
+     Redakcja| Data publikacji: 26 lipca 2025
+    </p>
+    <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/qMkJBWh5/sw22.jpg?text=Duży+Obraz+Artykułu"/>
+    <p class="image-caption">
+     The King’s Swan Marker David Barber mit einem seiner Schützlinge Picture Alliance
+    </p>
+    <div class="article-body">
+     <p style="">
+      W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
                         Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności (dziś to Karol III). Ale nie o monarchię chodzi, a o ekologię.
-                        Ptaki są ważone, obrączkowane, opisywane. Dzieci klaszczą. Londyn liczy łabędzie. </p>
-                    <p style="">A w Gdańsku?
+                        Ptaki są ważone, obrączkowane, opisywane. Dzieci klaszczą. Londyn liczy łabędzie.
+     </p>
+     <p style="">
+      A w Gdańsku?
                         Gdańsk kiedyś był inny. Nie tylko miejski, lecz alter miejski. W Stawach Królewskich, tam gdzie woda pachniała historią, łabędzie pływały spokojnie — a obywatele dobrze ubrani kupowali karneczki z datą ważności, by karmić nie chlebem z folii, lecz ziarnem z lnianej torby. Nie sypali jedzenia — składali je u brzegu.
                         W Gdańsku to łabędzie liczyły ludzi.
                         Niektórych więcej niż raz – bo przynosili prawdziwe jedzenie.
@@ -134,63 +217,91 @@
                         Ale z roku na rok było ich mniej.
                         Mniej ptaków. Mniej ludzi.
                         W końcu nie było już na kogo liczyć.
-                        I nie było komu liczyć.</p>
-                    <p style="">Odleciały.
+                        I nie było komu liczyć.
+     </p>
+     <p style="">
+      Odleciały.
                         Może do Schwangau, gdzie w herbie łabędź, a na zamku duch Ludwika II.
                         Może do Brabancji, gdzie grają marsz weselny Wagnera –
                         którego dziś nie chcą słuchać, bo Wagner nie lubił Parady Równości,
                         która idzie przez współczesny Gdańsk.
                         Może do Londynu, by dać się zważyć i wpisać do systemu.
                         Może do Wolnego Miasta Gdańska – którego już nie ma.
-                        Ale to najdłuższy lot – i podjęli go tylko nieliczni. </p>
-                    <p style=""> Na Dolnym Mieście zostały opakowania po chipsach,
+                        Ale to najdłuższy lot – i podjęli go tylko nieliczni.
+     </p>
+     <p style="">
+      Na Dolnym Mieście zostały opakowania po chipsach,
                         psy z właścicielami, których już nie da się odróżnić – kto pies, kto pan.
-                        Między popękanymi wieżyczkami Śluzy pływają kajaki i puste butelki po energetykach. I nikt już nie mówi: „Tam, przy moście, był łabędź. Duży, biały. Nie bał się ludzi.”</p>
-                </div>
-                <div class="article-actions">
-                    <a href="index.html">Start page</a>
-                    <a href="comments.html">Comment</a>
-                    <button onclick="navigator.share({url: window.location.href})">Share</button>
-                    <button onclick="navigator.clipboard.writeText(window.location.href)">Copy link</button>
-                    <button onclick="window.print()">Print</button>
-                </div>
-                <div class="section-separator"></div>
-                <div class="editorial-info">
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
-                </div>
-            </div>
-            <div class="vertical-strip"></div>
-            <aside class="sidebar kontener-szary desktop-sidebar">
-                <div class="clock-calendar-row">
-                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
-</iframe>
-                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
-</iframe>
-                </div>
-                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-                <div class="support-newsletter-section">
-                    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
-</iframe>
-                </div>
-                <div class="ads google sidebar-bottom-ad">
-                    <p>Reklama Google (na dole sidebara)</p>
-                </div>
-            </aside>
-        </div>
-        <div class="mobile-bottom-gadgets-container">
-            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-            <div class="support-newsletter-section">
-                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
-</iframe>
-            </div>
-            <div class="ads google sidebar-bottom-ad">
-                <p>Reklama Google (na dole sidebara)</p>
-            </div>
-        </div>
-        <footer>
-</footer>
-        <script>
-    // Offcanvas menu script
+                        Między popękanymi wieżyczkami Śluzy pływają kajaki i puste butelki po energetykach. I nikt już nie mówi: „Tam, przy moście, był łabędź. Duży, biały. Nie bał się ludzi.”
+     </p>
+    </div>
+    <div class="article-actions">
+     <a href="index.html">
+      Start page
+     </a>
+     <a href="comments.html">
+      Comment
+     </a>
+     <button onclick="navigator.share({url: window.location.href})">
+      Share
+     </button>
+     <button onclick="navigator.clipboard.writeText(window.location.href)">
+      Copy link
+     </button>
+     <button onclick="window.print()">
+      Print
+     </button>
+    </div>
+    <div class="section-separator">
+    </div>
+    <div class="editorial-info">
+     <p>
+      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig
+     </p>
+     <a class="contact-btn" href="kontakt.html">
+      Skontaktuj się z nami
+     </a>
+    </div>
+   </div>
+   <div class="vertical-strip">
+   </div>
+   <aside class="sidebar kontener-szary desktop-sidebar">
+    <div class="clock-calendar-row">
+     <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+     </iframe>
+     <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+     </iframe>
+    </div>
+    <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+    </iframe>
+    <div class="support-newsletter-section">
+     <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+     </iframe>
+    </div>
+    <div class="ads google sidebar-bottom-ad">
+     <p>
+      Reklama Google (na dole sidebara)
+     </p>
+    </div>
+   </aside>
+  </div>
+  <div class="mobile-bottom-gadgets-container">
+   <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+   </iframe>
+   <div class="support-newsletter-section">
+    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+    </iframe>
+   </div>
+   <div class="ads google sidebar-bottom-ad">
+    <p>
+     Reklama Google (na dole sidebara)
+    </p>
+   </div>
+  </div>
+  <footer>
+  </footer>
+  <script>
+   // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
     const menu   = document.getElementById('offcanvas-menu');
     const overlay= document.getElementById('menu-overlay');
@@ -210,5 +321,15 @@
       overlay.addEventListener('click', toggleMenu);
     }
   </script>
-    </body>
+  <div class="cookie-bar" id="cookie-bar">
+   <p>
+    Ta strona używa plików cookie w celu zapewnienia najlepszego komfortu użytkowania.
+   </p>
+   <button id="accept-cookies">
+    Akceptuję
+   </button>
+  </div>
+  <script src="js/cookie-bar.js">
+  </script>
+ </body>
 </html>
