--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjneg
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_auto.js">
   </script>
  </body>
 </html>
